CB-5045 move configs to model package