@@ -21,9 +21,9 @@ import com.google.gson.GsonBuilder;
 import com.google.gson.reflect.TypeToken;
 import io.cloudbeaver.DBWConstants;
 import io.cloudbeaver.auth.*;
-import io.cloudbeaver.model.app.WebAppConfiguration;
 import io.cloudbeaver.model.app.WebAuthApplication;
 import io.cloudbeaver.model.app.WebAuthConfiguration;
+import io.cloudbeaver.model.config.SMControllerConfiguration;
 import io.cloudbeaver.registry.WebAuthProviderDescriptor;
 import io.cloudbeaver.registry.WebAuthProviderRegistry;
 import io.cloudbeaver.registry.WebMetaParametersRegistry;
@@ -433,7 +433,7 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
             try (PreparedStatement dbStat = dbCon.prepareStatement(
                 database.normalizeTableNames("SELECT USER_ID,IS_ACTIVE,DEFAULT_AUTH_ROLE FROM {table_prefix}CB_USER"
                     + buildUsersFilter(filter) + "\nORDER BY USER_ID " + getOffsetLimitPart(filter)))) {
-                int parameterIndex = setUsersFilterValues(dbStat, filter, 1);
+                setUsersFilterValues(dbStat, filter, 1);
 
                 try (ResultSet dbResult = dbStat.executeQuery()) {
                     while (dbResult.next()) {
@@ -492,7 +492,7 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
         if (filter.getEnabledState() != null) {
             whereParts.add("IS_ACTIVE=?");
         }
-        if (whereParts.size() > 0) {
+        if (!whereParts.isEmpty()) {
             where.append(whereParts.stream().collect(Collectors.joining(" AND ", " WHERE ", "")));
         }
         return where.toString();
@@ -776,7 +776,7 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
                 String encodedValue = CommonUtils.toString(cred.getValue());
                 encodedValue = property.getEncryption().encrypt(userId, encodedValue);
                 return new String[]{propertyName, encodedValue};
-            }).collect(Collectors.toList());
+            }).toList();
         } catch (Exception e) {
             throw new DBCException(e.getMessage(), e);
         }
@@ -961,15 +961,13 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
             WebMetaParametersRegistry.getInstance().getMetaParameters(subjectType));
 
         // Add metas from enabled auth providers
-        WebAppConfiguration appConfiguration = application.getAppConfiguration();
-        if (appConfiguration instanceof WebAuthConfiguration) {
-            for (String apId : ((WebAuthConfiguration) appConfiguration).getEnabledAuthProviders()) {
-                WebAuthProviderDescriptor ap = WebAuthProviderRegistry.getInstance().getAuthProvider(apId);
-                if (ap != null) {
-                    List<DBPPropertyDescriptor> metaProps = ap.getMetaParameters(SMSubjectType.team);
-                    if (!CommonUtils.isEmpty(metaProps)) {
-                        props.addAll(metaProps);
-                    }
+        WebAuthConfiguration authConfiguration = application.getAuthConfiguration();
+        for (String apId : authConfiguration.getEnabledAuthProviders()) {
+            WebAuthProviderDescriptor ap = WebAuthProviderRegistry.getInstance().getAuthProvider(apId);
+            if (ap != null) {
+                List<DBPPropertyDescriptor> metaProps = ap.getMetaParameters(SMSubjectType.team);
+                if (!CommonUtils.isEmpty(metaProps)) {
+                    props.addAll(metaProps);
                 }
             }
         }
@@ -989,9 +987,10 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
             String defaultUserTeam = getDefaultUserTeam();
             Map<String, SMTeam> teams = new LinkedHashMap<>();
             String query = database.normalizeTableNames(
-                    "SELECT T.*, S.IS_SECRET_STORAGE FROM {table_prefix}CB_TEAM T, " +
-                            "{table_prefix}CB_AUTH_SUBJECT S " +
-                            "WHERE T.TEAM_ID IN (S.SUBJECT_ID, ?) ORDER BY TEAM_ID");
+                """
+                    SELECT T.*, S.IS_SECRET_STORAGE FROM {table_prefix}CB_TEAM T, \
+                    {table_prefix}CB_AUTH_SUBJECT S \
+                    WHERE T.TEAM_ID IN (S.SUBJECT_ID, ?) ORDER BY TEAM_ID""");
             try (PreparedStatement dbPreparedStatement = dbCon.prepareStatement(query)) {
                 dbPreparedStatement.setString(1, defaultUserTeam);
                 try (ResultSet dbResult = dbPreparedStatement.executeQuery()) {
@@ -1001,9 +1000,11 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
                     }
                 }
             }
-            query = database.normalizeTableNames("SELECT SUBJECT_ID,PERMISSION_ID\n" +
-                    "FROM {table_prefix}CB_AUTH_PERMISSIONS AP, {table_prefix}CB_TEAM R\n" +
-                    "WHERE AP.SUBJECT_ID IN (R.TEAM_ID,?)\n");
+            query = database.normalizeTableNames("""
+                SELECT SUBJECT_ID,PERMISSION_ID
+                FROM {table_prefix}CB_AUTH_PERMISSIONS AP, {table_prefix}CB_TEAM R
+                WHERE AP.SUBJECT_ID IN (R.TEAM_ID,?)
+                """);
             try (PreparedStatement dbPreparedStatement = dbCon.prepareStatement(query)) {
                 dbPreparedStatement.setString(1, defaultUserTeam);
                 try (ResultSet dbResult = dbPreparedStatement.executeQuery()) {
@@ -1340,7 +1341,7 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
         @NotNull Map<String, Object> parameters,
         @NotNull SMSessionType sessionType,
         Connection dbCon
-    ) throws SQLException, DBException {
+    ) throws SQLException {
         var sessionId = UUID.randomUUID().toString();
         try (PreparedStatement dbStat = dbCon.prepareStatement(
             database.normalizeTableNames(
@@ -1783,16 +1784,12 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
             }
 
             if (smAuthStatus != SMAuthStatus.SUCCESS) {
-                switch (smAuthStatus) {
-                    case IN_PROGRESS:
-                        return SMAuthInfo.inProgress(authId, signInLink, signOutLink, authData, isMainAuth, forceSessionsLogout);
-                    case ERROR:
-                        return SMAuthInfo.error(authId, authError, isMainAuth, errorCode);
-                    case EXPIRED:
-                        return SMAuthInfo.expired(authId, readExpiredData ? authData : Map.of(), isMainAuth);
-                    default:
-                        throw new SMException("Unknown auth status:" + smAuthStatus);
-                }
+                return switch (smAuthStatus) {
+                    case IN_PROGRESS -> SMAuthInfo.inProgress(authId, signInLink, signOutLink, authData, isMainAuth, forceSessionsLogout);
+                    case ERROR -> SMAuthInfo.error(authId, authError, isMainAuth, errorCode);
+                    case EXPIRED -> SMAuthInfo.expired(authId, readExpiredData ? authData : Map.of(), isMainAuth);
+                    default -> throw new SMException("Unknown auth status:" + smAuthStatus);
+                };
             }
 
             SMTokens smTokens = findTokenBySmSession(smSessionId);
@@ -2030,7 +2027,7 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
         String activeUserId = null;
         if (!isMainAuthSession) {
             var accessToken = findTokenBySmSession(authAttemptSessionInfo.getSmSessionId()).getSmAccessToken();
-            //this is an additional authorization and we should to return the original permissions and  userId
+            //this is an additional authorization, and we should to return the original permissions and  userId
             permissions = getTokenPermissions(accessToken);
             activeUserId = permissions.getUserId();
         }
@@ -2499,8 +2496,9 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
         String authRole;
         try (Connection dbCon = database.openConnection();
              PreparedStatement dbStat = dbCon.prepareStatement(
-                 database.normalizeTableNames("SELECT USER_ID, EXPIRATION_TIME, SESSION_ID, AUTH_ROLE FROM {table_prefix}CB_AUTH_TOKEN " +
-                     "WHERE TOKEN_ID=?"));
+                 database.normalizeTableNames("""
+                     SELECT USER_ID, EXPIRATION_TIME, SESSION_ID, AUTH_ROLE FROM {table_prefix}CB_AUTH_TOKEN \
+                     WHERE TOKEN_ID=?"""))
         ) {
             dbStat.setString(1, token);
             try (var dbResult = dbStat.executeQuery()) {
@@ -2524,17 +2522,14 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
 
     @Override
     public SMAuthProviderDescriptor[] getAvailableAuthProviders() throws DBException {
-        if (!(application.getAppConfiguration() instanceof WebAuthConfiguration)) {
-            throw new DBException("Web application doesn't support external authentication");
-        }
-        WebAuthConfiguration appConfiguration = (WebAuthConfiguration) application.getAppConfiguration();
+        WebAuthConfiguration appConfiguration = application.getAuthConfiguration();
         Set<SMAuthProviderCustomConfiguration> customConfigurations = appConfiguration.getAuthCustomConfigurations();
         List<SMAuthProviderDescriptor> providers = WebAuthProviderRegistry.getInstance().getAuthProviders().stream()
             .filter(ap ->
                 !ap.isTrusted() &&
                     appConfiguration.isAuthProviderEnabled(ap.getId()) &&
                     (!ap.isConfigurable() || hasProviderConfiguration(ap, customConfigurations)))
-            .map(WebAuthProviderDescriptor::createDescriptorBean).collect(Collectors.toList());
+            .map(WebAuthProviderDescriptor::createDescriptorBean).toList();
 
         if (!CommonUtils.isEmpty(customConfigurations)) {
             // Attach custom configs to providers
@@ -2925,12 +2920,12 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
         var grantedPermissionsBySubjectId = new HashMap<String, SMObjectPermissionsGrant.Builder>();
         try (Connection dbCon = database.openConnection()) {
             try (PreparedStatement dbStat = dbCon.prepareStatement(database.normalizeTableNames(
-                "SELECT OP.SUBJECT_ID,S.SUBJECT_TYPE, OP.PERMISSION\n" +
-                    "FROM {table_prefix}CB_OBJECT_PERMISSIONS OP, {table_prefix}CB_AUTH_SUBJECT S\n" +
-                    "WHERE S.SUBJECT_ID = OP.SUBJECT_ID AND OP.OBJECT_TYPE=? AND OP.OBJECT_ID=?"))) {
+                """
+                    SELECT OP.SUBJECT_ID,S.SUBJECT_TYPE, OP.PERMISSION
+                    FROM {table_prefix}CB_OBJECT_PERMISSIONS OP, {table_prefix}CB_AUTH_SUBJECT S
+                    WHERE S.SUBJECT_ID = OP.SUBJECT_ID AND OP.OBJECT_TYPE=? AND OP.OBJECT_ID=?"""))) {
                 dbStat.setString(1, smObjectType.name());
                 dbStat.setString(2, objectId);
-                List<SMDataSourceGrant> result = new ArrayList<>();
                 try (ResultSet dbResult = dbStat.executeQuery()) {
                     while (dbResult.next()) {
                         String subjectId = dbResult.getString(1);
@@ -2979,7 +2974,7 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
                 }
                 return grantedPermissionsByObjectId.values().stream()
                     .map(SMObjectPermissionsGrant.Builder::build)
-                    .collect(Collectors.toList());
+                    .toList();
             }
 
         } catch (SQLException e) {
@@ -3151,7 +3146,6 @@ public class CBEmbeddedSecurityController<T extends WebAuthApplication>
 
     private SMSubjectType getSubjectType(@NotNull String subjectId) {
         try (Connection dbCon = database.openConnection()) {
-            Set<String> result = new HashSet<>();
             String sqlBuilder = "SELECT SUBJECT_TYPE FROM {table_prefix}CB_AUTH_SUBJECT U WHERE SUBJECT_ID = ?";
             try (var dbStat = dbCon.prepareStatement(database.normalizeTableNames(sqlBuilder))) {
                 dbStat.setString(1, subjectId);
